[metadata]
name = cp-nagios-plugins
version = 1.0.11
description = Cross Platform Nagios Plugins
long_description = file: README.rst
keywords = nagios, plugins
license = Apache 2.0
license_file = LICENSE
author = Hoplite Industries, Inc.
maintainer = Shawn Michael
maintainer_email = smichael@hopliteindustries.com
url = https://github.com/HopliteInd/cp-nagios-plugins
classifiers =
	Development Status :: 4 - Beta
	Environment :: No Input/Output (Daemon)
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: System :: Monitoring

[options]
zip_safe = True
include_package_data = False
packages = libnagios

[options.entry_points]
console_scripts = check_disk = libnagios.checks.disk:run

[options.packages.find]
exclude =

[flake8]
max-line-length = 79
extend-ignore = E203

[pylint.FORMAT]
max-line-length = 79

[pylint.messages control]
disable = C0330, C0326

; vim: filetype=dosini:
